# simple-redirect-service

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.Dockerfile  bun.lockb  deny.toml  justfile  package.json  redirects.json  shard.yml  tsconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  release.yml
spec/: simple-redirect-service_spec.cr  spec_helper.cr
src/: cache.ts  database.ts  index.ts  main.rs  simple-redirect-service.cr  utils.ts
src/redirect/: redirect-file.ts  redirect.ts  stats.ts
